# flowpaint

./: .gitignore  CHANGELOG.md  README.md  flowpaint-test.html  flowpaint.aux  flowpaint.cabal  flowpaint.hp  flowpaint.ps  weeder.toml
app/: GlutMain.hs  Main.hs
c/: mixer.c  mixer.h
shaders/: shader.fragment  shader.vertex
src/Interaction/: Input.hs  Render.hs  Sense.hs  SignalFunctions.hs
src/Interface/: Canvas.hs  RawInput.hs  Render.hs  Sense.hs  UserInput.hs
src/Reactivity/: Input.hs  MouseInput.hs  SignalFunctions.hs
src/Render/: render.hs
src/Rendering/: LoadShaders.hs
src/Simulation/: Capillary.hs  Colors.hs  Shallow.hs  Source.hs  State.hs  SurfaceLayer.hs  VelocityField.hs  WaterQuantities.hs
src/Utils/: Fields.hs  Matrix.hs
tests/: Preparation.hs  Test.hs
tests/TestStrokes/: clear_canvas_only.txt  clear_canvas_stroke.txt  large_stroke.txt  single_stroke_1.txt  single_stroke_2.txt  toggle_water.txt  wetting_behaviour_toggle.txt
