cabal-version:      2.4
name:               flowpaint
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             cxrala
maintainer:         ameliang123@gmai~l.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Simulation.VelocityField
        Utils.Matrix
    build-depends:    base ^>=4.17.2.0,
                      vector
    hs-source-dirs:
        src

executable flowpaint
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      simple-affine-space,
                      vector,
                      Yampa
    hs-source-dirs:   app
    default-language: Haskell2010
