cabal-version:      2.4
name:               flowpaint
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             cxrala
maintainer:         ameliang123@gmai~l.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Simulation.VelocityField
    Simulation.WaterQuantities
    Simulation.SurfaceLayer
    Simulation.Capillary
    Simulation.Source
    Simulation.State
    Utils.Matrix
    Utils.Fields
    Interface.UserInput
    Interaction.Input
    Interaction.Render
    Interaction.Sense
    Interaction.SignalFunctions
    Rendering.LoadShaders

  build-depends:
    , base    ^>=4.17.2.0
    , vector
    , hashable
    , random
    , Yampa
    , sdl2
    , linear
    , bytestring
    , OpenGL
  hs-source-dirs:  src

executable flowpaint
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base                 ^>=4.17.2.0
    , flowpaint
    , GLUT
    , linear
    , sdl2
    , simple-affine-space
    , vector
    , Yampa
    , text
  hs-source-dirs:   app
  default-language: Haskell2010
