cabal-version:      2.4
name:               flowpaint
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             cxrala
maintainer:         ameliang123@gmai~l.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library flowpaint-lib
  exposed-modules:
    Interaction.Input
    Interaction.Render
    Interaction.Sense
    Interaction.SignalFunctions
    Interface.UserInput
    Simulation.Capillary
    Simulation.Source
    Simulation.State
    Simulation.SurfaceLayer
    Simulation.VelocityField
    Simulation.WaterQuantities
    Utils.Fields
    Utils.Matrix

  build-depends:
    , base        ^>=4.17.2.0
    , bytestring
    , hashable
    , linear
    , OpenGL
    , random
    , sdl2
    , vector
    , Yampa

  hs-source-dirs:  src

executable flowpaint
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base                 ^>=4.17.2.0
    , flowpaint-lib
    , GLUT
    , linear
    , sdl2
    , simple-affine-space
    , text
    , vector
    , Yampa

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite flowpaint-test
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  other-modules:
  hs-source-dirs:   tests
  build-depends:
    , flowpaint-lib
    , base
    , tasty  >=0.11 && <1.4
    , tasty-hspec
    , hspec

  default-language: Haskell2010
